--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 rouille = "3.6.1"
-serde = "1.0.157"
+serde = { version = "1.0.157", features = ["derive"] }
 serde_json = "1.0.94"
